# BitmapScaler

./: README.md  build.gradle.kts  settings.gradle.kts
bitmapscaler/: build.gradle.kts
bitmapscaler/src/main/cpp/: BitmapScaler.cpp  CMakeLists.txt  JniExceptions.cpp  JniExceptions.h  XScaler.cpp
bitmapscaler/src/main/java/com/t8rin/bitmapscaler/: BitmapScaler.kt  LockPixelsException.kt  ScaleMode.kt
gradle/wrapper/: gradle-wrapper.properties
